Fix alignment of file lists on small screens

--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -24,6 +24,8 @@
 
 // icon with text
 .#{$prefix}text-icon {
+	display: inline-flex;
+	align-items: center;
 
 	[class^="sg-icon-"],
 	[class*=" sg-icon-"] {
